minor layout adjustment

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">keimpx</h1>
-        <p class="header">Check for validity of NT/LM credentials across a network over SMB</p>
+        <p class="header">Check for valid credentials across a network over SMB</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/inquisb/keimpx/zipball/master">Download ZIP</a></li>
